Error reloading linked library #77853

Closed
opened 2020-06-14 12:57:44 +02:00 by Mário Pereira · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7

Caused by 367ecff15d

Short description of error
Dupplicated objects are created (but not visible) when reloading a linked library.

Exact steps for others to reproduce the error

  • Create a blender file with just a cube and save it
  • Create a new blender file, delete the default cube and link the other cube
    ** File -> Link -> (select file) -> Object -> Cube
  • Reload the library
    Select "Blender File" from the "Scenes", "View Layer", etc dropdown Select the linked file and click "Reload"

This error message shows on the bottom:
Lib Reload: Replacing all references to old data-block 'OBCube' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'OBCube~000'

The blend file will show repeated objects as shown in the attached screenshot.
image.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Caused by 367ecff15d **Short description of error** Dupplicated objects are created (but not visible) when reloading a linked library. **Exact steps for others to reproduce the error** * Create a blender file with just a cube and save it * Create a new blender file, delete the default cube and link the other cube ** File -> Link -> (select file) -> Object -> Cube * Reload the library **Select "Blender File" from the "Scenes", "View Layer", etc dropdown** Select the linked file and click "Reload" This error message shows on the bottom: Lib Reload: Replacing all references to old data-block 'OBCube' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'OBCube~000' The blend file will show repeated objects as shown in the attached screenshot. ![image.png](https://archive.blender.org/developer/F8619082/image.png)
Author

Added subscriber: @zimarrio

Added subscriber: @zimarrio

Added subscriber: @Harvester

Added subscriber: @Harvester

I can confirm the issue.

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Saving & reloading the file purges those additional data-blocks (it happens also with collections).

I can confirm the issue. **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Saving & reloading the file purges those additional data-blocks (it happens also with collections).
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Caused by 367ecff15d.

Havent checked further, but looks like a bug to me, This kicks in:

Note that this should not happen - but better be safe than sorry in this area,
at least until we are 100% sure this cannot ever happen.
Also, we can safely assume names were unique so far,
so just replacing '.' by '~' should work,
but this does not totally rules out the possibility of name collision.

CC @mont29

Caused by 367ecff15d. Havent checked further, but looks like a bug to me, This kicks in: > Note that this *should* not happen - but better be safe than sorry in this area, > at least until we are 100% sure this cannot ever happen. > Also, we can safely assume names were unique so far, > so just replacing '.' by '~' should work, > but this does not totally rules out the possibility of name collision. CC @mont29
Bastien Montagne self-assigned this 2020-06-15 15:01:05 +02:00

This issue was referenced by 4f3fdf7715

This issue was referenced by 4f3fdf7715c21c9f9fb1374efe12b027477e5d59

This issue was referenced by eadbdf170a

This issue was referenced by eadbdf170aeccba498fd9c0e7ef879f2a9f71bd0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77853
No description provided.