Fix T77853: Error reloading linked library.

Issue related to how ID refcounting was changed when loading blendfile
data...